<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>dk.au.ece.vdmj</groupId>
    <artifactId>vdmj-suite</artifactId>
    <name>VDMJ Suite</name>
    <packaging>pom</packaging>
    <version>${revision}${sha1}${changelist}</version>

    <properties>
        <maven.build.timestamp.format>yyMMdd</maven.build.timestamp.format>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <revision>4.5.0-P-SNAPSHOT</revision>
        <changelist></changelist>
        <sha1/>
    </properties>

    <!-- sub modules -->
    <modules>
        <module>annotations</module>
        <module>annotations2</module>
        <module>vdmj</module>
        <module>vdmjunit</module>
        <module>lsp</module>
        <module>dbgp</module>
        <module>dbgpc</module>
        <module>stdlib</module>
        <module>cmd-plugins</module>
        <module>examples</module>
    </modules>

   	<dependencyManagement>
   		<dependencies>
	   		<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>4.13.1</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>dk.au.ece.vdmj</groupId>
				<artifactId>vdmj</artifactId>
				<version>${project.version}</version>
			</dependency>
	        <dependency>
	            <groupId>dk.au.ece.vdmj</groupId>
	            <artifactId>lsp</artifactId>
				<version>${project.version}</version>
	        </dependency>
		</dependencies>
   	</dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <!-- Configure the compiler for all VDMJ Projects -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.10.1</version>
					<configuration>
						<compilerArgs>
							<arg>-Xlint:deprecation</arg>
						</compilerArgs>
						<source>1.8</source>
						<target>1.8</target>
					</configuration>
                </plugin>

                <!-- Attatch sources to all installed jars -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>3.2.1</version>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <attach>true</attach>
                    </configuration>
                </plugin>

                <!-- Enable JavaDoc but dont fail on error. This must be disabled for
                     the Eclipse project in the IDE -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>3.3.2</version>
                    <executions>
                        <execution>
                            <id>attach-javadocs</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <failOnError>false</failOnError>
                        <quiet>true</quiet>
						<source>8</source>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>3.1.0</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.0.0-M6</version>
					<configuration>
						<includes>
							<include>**/*Test.java</include>
						</includes>
					</configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>3.3.0</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>3.3.0</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-install-plugin</artifactId>
                    <version>3.0.0-M1</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>3.0.0-M2</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.2.2</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>3.2.0</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jarsigner-plugin</artifactId>
                    <version>3.0.0</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-gpg-plugin</artifactId>
                    <version>3.0.1</version>
                </plugin>

            </plugins>
        </pluginManagement>

		<finalName>
			${project.artifactId}-${project.version}-${maven.build.timestamp}
		</finalName>

	    <plugins>
			<plugin>
				<groupId>com.outbrain.swinfra</groupId>
				<artifactId>ci-friendly-flatten-maven-plugin</artifactId>
				<version>1.0.14</version>
				<executions>
					<execution>
						<goals>
							<goal>clean</goal>
							<goal>flatten</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
	    </plugins>
    </build>
    

    <scm>
        <url>https://github.com/nickbattle/vdmj
        </url>
        <connection>scm:git:https://github.com/nickbattle</connection>
        <developerConnection>scm:git:https://github.com/nickbattle</developerConnection>
    </scm>

    <url>https://github.com/nickbattle/vdmj</url>

    <description>VDMJ provides basic tool support for the VDM-SL, VDM++ and VDM-RT specification languages, written in
        Java. It includes a parser, a type checker, an interpreter (with arbitrary precision arithmetic), a debugger, a
        proof obligation generator and a combinatorial test generator with coverage recording, as well as JUnit support
        for automatic testing and user definable annotations.
    </description>

    <developers>
        <developer>
            <id>NickBattle</id>
            <name>Nick Battle</name>
            <email>nick.battle@gmail.com</email>
            <roles>
                <role>developer</role>
            </roles>
        </developer>
    </developers>

    <licenses>
        <license>
            <name>GPL-3.0</name>
            <url>https://github.com/nickbattle/vdmj/blob/master/LICENCE</url>
        </license>
    </licenses>

    <profiles>
        <profile>
            <id>release</id>
            <activation>
                <property>
                    <name>performRelease</name>
                    <value>true</value>
                </property>
            </activation>
            <distributionManagement>
                <snapshotRepository>
                    <id>ossrh</id>
                    <url>https://oss.sonatype.org/content/repositories/snapshots</url>
                </snapshotRepository>
                <repository>
                    <id>ossrh</id>
                    <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
                </repository>
            </distributionManagement>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                    </plugin>
                    <plugin>
                        <groupId>org.sonatype.plugins</groupId>
                        <artifactId>nexus-staging-maven-plugin</artifactId>
                        <version>1.6.12</version>
                        <extensions>true</extensions>
                        <configuration>
                            <serverId>ossrh</serverId>
                            <nexusUrl>https://s01.oss.sonatype.org</nexusUrl>
                            <!--autoReleaseAfterClose>true</autoReleaseAfterClose-->
                            <autoReleaseAfterClose>false</autoReleaseAfterClose>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>

        <profile>
            <id>au</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <distributionManagement>
                <repository>
                    <id>vdmj.overture.au.dk-central</id>
                    <name>overture.au.dk-releases</name>
                    <url>https://overture.au.dk/artifactory/vdmj</url>
                </repository>
                <snapshotRepository>
                    <id>vdmj.overture.au.dk-snapshots</id>
                    <name>overture.au.dk-snapshots</name>
                    <url>https://overture.au.dk/artifactory/vdmj</url>
                </snapshotRepository>
            </distributionManagement>
        </profile>

    </profiles>

</project>
